<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottonnavigation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lltt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civAvatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/sieunhan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thongtincanhan"
                android:textColor="@color/color_title"
                android:textSize="@dimen/size_25sp" />

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgmail"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/mail_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgmail"
                    android:text="Email"
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp" />
            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#43D1C4E9" />

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgavatar"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_phuongtien" />

                <TextView
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_toRightOf="@id/imgavatar"
                    android:text="Tên" />
            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#43D1C4E9" />

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgpassword"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_visibility" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgpassword"
                    android:text="@string/doimatkhau"
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp" />
            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#43D1C4E9" />

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgphone"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:src="@drawable/ic_noidung" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgphone"
                    android:text="Số điện thoại"
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="#43D1C4E9" />

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgcompany"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_ongoing" />

                <TextView
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp"
                    android:id="@+id/congty1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgcompany"
                    android:text="@string/congty" />
            </RelativeLayout>
            <TextView
                android:textColor="@color/color_chu"
                android:textSize="@dimen/size_15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/congty1"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imgcompany"
                android:text="@string/congty2" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lldk"
            android:layout_below="@+id/lltt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_10dp"
                android:background="#E4edf4" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_below="@+id/lldk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_50dp"
                android:gravity="center_vertical"
                android:text="@string/thietlaplich"
                android:textColor="@color/color_title"
                android:textSize="@dimen/size_25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/imgglobal"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:src="@drawable/ic_diachi" />

                <TextView
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgglobal"
                    android:text="@string/quocgia" />

                <ImageView

                    android:id="@+id/imgnext"
                    android:layout_width="@dimen/margin_15dp"
                    android:layout_height="@dimen/margin_15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next"></ImageView>

                <TextView
                    android:textSize="@dimen/size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/imgnext"
                    android:hint="Việt Nam"></TextView>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#43D1C4E9" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <ImageView
                    android:id="@+id/imgmuigio"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_congcuhotro" />

                <TextView
                    android:textColor="@color/color_chu"
                    android:textSize="@dimen/size_15sp"
                    android:id="@+id/txtmuigio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgmuigio"
                    android:text="@string/muigio" />

                <ImageView
                    android:id="@+id/imgnext2"
                    android:layout_width="@dimen/margin_15dp"
                    android:layout_height="@dimen/margin_15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next"></ImageView>

                <TextView
                    android:textSize="@dimen/size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/imgnext2"
                    android:hint="GMT+7:00"></TextView>
            </RelativeLayout>
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottonnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>